@@ -1,0 +1,6 @@
+#!/usr/bin/env python
+import sys
+from fs.commands.fsmount import run
+sys.exit(run())
+
+
